<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <Preference
        android:title="@string/main_author_title"
        android:summary="@string/main_author_description"
        />
    <Preference
        android:title="@string/team_author_title"
        android:summary="@string/team_author_description"
        />
    <Preference
        android:key="version_click"
        android:title="@string/project_desire_version_title"
        android:summary="@string/project_desire_version_description"
        />
    <Preference
        android:title="@string/project_desire_scripting_title"
        android:summary="@string/project_desire_scripting_description"
        />
    <Preference
        android:key="credits_click"
        android:title="@string/special_author_title"
        android:summary="Click Here for more Information"
        />

</PreferenceScreen>
